# telco-churn-risk-scoring

./: .env.example  .gitignore  README.md  pyproject.toml
notebooks/: 01_data_loading_validation.ipynb
reports/: sql_insights.md
sql/: 00_database_setup.sql  00_database_validation.sql  01_create_telco_customers.sql  02_data_overview.sql  03_churn_rate_analysis.sql  04_financial_impact_analysis.sql  05_customer_segments_analysis.sql
src/: toolkit_functions.py
src/telco_churn/: data_preparation.py  plots.py
tests/data_preparation/: test_load_telco_customers_from_db.py  test_save_dataframe_to_csv.py
tests/plots/: test_save_plot.py
