[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "telco-churn-risk-scoring"
version = "0.1.0"
description = "Machine learning prototype for predicting customer churn risk."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "scikit-learn",
    "sqlalchemy",
    "psycopg2-binary"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"